<resources>
    <string name="app_name">Rmenber</string>

    <!-- activity_login -->
    <string name="login_edtpassword">Password</string>
    <string name="login_btningresar">INGRESAR</string>
    <string name="login_txtpista">Necesitas una pista?</string>
    <string name="login_txtcambiarpass">Cambiar contraseña</string>

    <!-- change_password -->
    <string name="changepassword_title">CAMBIAR CONTRASEÑA</string>
    <string name="changepassword_txtpassactual">Contraseña actual</string>
    <string name="changepassword_txtpassnew">Contraseña nueva</string>
    <string name="changepassword_txtAceptar">ACEPTAR</string>
    <string name="changepassword_txtCancelar">CANCELAR</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- activity_main -->
    <string name="main_temas">Temas</string>
    <string name="main_NFC">NFC</string>
    <string name="main_cerrarsesion">Cerrar sesión</string>
</resources>
