<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_temas"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/main_temas" />
        <item
            android:id="@+id/nav_nfc"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/main_NFC" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_close"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/main_cerrarsesion"/>
        </menu>
    </item>

</menu>
