<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.one_x_ub.rmenber.LoginActivity">

    <EditText
        android:background="@color/colorEdittext"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/login_edtpassword"
        android:id="@+id/login_edt_password"
        android:layout_height="55dp"
        android:layout_marginBottom="11dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:layout_above="@+id/login_btn_ingresar"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"
        android:layout_width="320dp"
        android:textSize="17sp"
        android:drawableRight="@drawable/lock_password"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:text="@string/login_btningresar"
        android:id="@+id/login_btn_ingresar"
        android:elevation="0dp"
        android:textSize="17sp"
        android:onClick="onClickLogin"
        android:background="@color/colorAccent"
        android:textStyle="normal|bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="320dp"
        android:layout_height="60dp" />

    <TextView
        android:text="@string/login_txtcambiarpass"
        android:layout_width="150dp"
        android:textSize="15dp"
        android:background="@drawable/button_circle_effect"
        android:onClick="showDialogChangePassword"
        android:layout_height="31dp"
        android:paddingTop="4dp"
        android:id="@+id/login_txt_cambiarpass"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/login_txt_pista"
        android:layout_alignBottom="@+id/login_txt_pista"
        android:layout_toEndOf="@+id/login_txt_pista" />

    <TextView
        android:text="@string/login_txtpista"
        android:layout_height="31dp"
        android:textSize="15dp"
        android:background="@drawable/button_circle_effect"
        android:onClick="showCluePassword"
        android:layout_marginTop="73dp"
        android:paddingTop="4dp"
        android:id="@+id/login_txt_pista"
        android:textAlignment="center"
        android:layout_width="152dp"
        android:layout_marginStart="9dp"
        android:layout_below="@+id/login_btn_ingresar"
        android:layout_alignStart="@+id/login_btn_ingresar" />
</RelativeLayout>
